[tool.poetry]
name = "initial-mac"
version = "0.1.0"
description = ""
authors = ["weijiany <cnweijiany@gmail.com>"]
    readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
ansible = "^8.1.0"

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
priority = "primary"


[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
